--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
 		"start": "node backend/server.js"
 	},
 	"dependencies": {
+		"axios": "^0.19.2",
 		"body-parser": "^1.19.0",
 		"express": "^4.15.2"
 	}	
