--- a/public/config.json
+++ b/public/config.json
@@ -17,19 +17,19 @@
       "url": "https://sfmc-sms-ca.herokuapp.com/activity/save",
       "verb": "POST",
       "body": "",
-      "useJwt": true
+      "useJwt": false
     },
     "publish": {
       "url": "https://sfmc-sms-ca.herokuapp.com/activity/publish",
       "verb": "POST",
       "body": "",
-      "useJwt": true
+      "useJwt": false
     },
     "validate": {
       "url": "https://sfmc-sms-ca.herokuapp.com/activity/validate",
       "verb": "POST",
       "body": "",
-      "useJwt": true
+      "useJwt": false
     }
   },
   "wizardSteps": [
